--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,20 +49,21 @@ header nav ul li a {
 }
 
 footer {
+  display: flex;
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -77,11 +78,12 @@ section {
 
 /* Hero Style Start */
 .hero {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   background-image: url("../images/hero-bg.jpg");
-  height: 600px;
   background-size: cover;
   background-position: center;
-  position: relative;
 }
 /* Hero Style End */
 
@@ -89,11 +91,7 @@ section {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
 }
 
 .hero-form h3 {
