--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,10 +125,10 @@ section {
 }
 
 .intro {
-  text-align: center;
 }
 
 .intro p {
+  text-align: center;
   line-height: 1.7;
   color: #39a6b2;
   width: 80%;
@@ -137,7 +137,6 @@ section {
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -166,11 +165,13 @@ section {
 }
 
 .section-title {
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
+
   border-bottom: 3px solid;
 }
 
@@ -183,7 +184,6 @@ section {
 }
 
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -231,7 +231,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -268,6 +267,9 @@ section {
 
 .contact-info a {
   color: #fce138;
+}
+.flex-row {
+  display: flex;
 }
 
 /* REACH OUT STYLES END */
